--- a/Personales.html
+++ b/Personales.html
@@ -12,8 +12,8 @@
 		<!--Menu-->
 		<div class="navbar">
 			<a href="Pasatiempo.html">🠨</a>
-			<div class="dropdown active">
-				<button class="dropbtn"><a href="Personales.html">Personales</a></button>
+			<div class="dropdown">
+				<button class="dropbtn active"><a href="Personales.html">Personales</a></button>
 				<div class="dropdown-content">
 					<a href="Autobiografia.html">Autobiografía</a>
 					<a href="Pasatiempos.html">Pasatiempos</a>
@@ -22,7 +22,7 @@
 			</div>
 			<a href="Index.html">⌂</a>
 			<div class="dropdown">
-				<button class="dropbtn"><a href="Personales.html">Tareas</a></button>
+				<button class="dropbtn"><a href="Tareas.html">Tareas</a></button>
 				<div class="dropdown-content">
 					<a href="Tarea1.html">Tarea 1</a>
 					<a href="Tarea2.html">Tarea 2</a>
