check this out lalitoxxx

--- a/Personales.html
+++ b/Personales.html
@@ -13,7 +13,7 @@
 		<div class="navbar">
 			<a href="Pasatiempo.html">🠨</a>
 			<div class="dropdown">
-				<button class="dropbtn active"><a href="Personales.html">Personales</a></button>
+				<button class="dropbtn"><a class="active" href="Personales.html">Personales</a><button>
 				<div class="dropdown-content">
 					<a href="Autobiografia.html">Autobiografía</a>
 					<a href="Pasatiempos.html">Pasatiempos</a>
@@ -47,16 +47,34 @@
 		<!--Fin Menu-->
 		
 		<br>
-		<table>
-			<tr>
-			<th><img src="Imagenes/index1.jpg" style="float:right;width:200px;height:200px;"></th>
-			<th><span style="color: #FF7272">Alumna: </span>Azul Carolina Martínez Cabañas<br>
-			<span style="color: #FF7272">Matricula: </span>1868435<br>
-			<span style="color: #FF7272">Carrera: </span>ITS<br>
-			<span style="color: #FF7272">Materia: </span>Lenguajes de Programación<br>
-			<span style="color: #FF7272">Periodo: </span>Enero-Junio 2020<br>
-			<span style="color: #FF7272">Maestro: </span>Ing. Ismael Gutiérrez Pimentel</th>
-			</tr>
-		</table>
+		<div class="row center">
+			<div class="column">
+				<div class="container">
+					<img src="Imagenes/index1.jpg" width="200" height="200" alt="autobio" class="image">
+					<div class="overlay">
+						<a href="Autobiografia.html">
+						<div class="text">Mi autobiografía</div></a>
+					</div>
+				</div>
+			</div>
+			<div class="column">
+				<div class="container">
+					<img src="Imagenes/hobby4.jpg" width="200" height="200" alt="hobby">
+					<div class="overlay">
+						<a href="Pasatiempo.html">
+						<div class="text">Mi pasatiempo</div></a>
+					</div>
+				</div>
+			</div>
+			<div class="column">
+				<div class="container">
+					<img src="Imagenes/personales3.jpg" width="200" height="200" alt="bio">
+					<div class="overlay">
+						<a href="Destinos.html#lapaz">
+						<div class="text">Biografía<br>Blanca Treviño</div></a>
+					</div>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
