--- a/Biografia.html
+++ b/Biografia.html
@@ -1,17 +1,53 @@
 <html>
-	<head>
-		<title>Biografía</title>
-		<meta charset="utf-8" />
-		<link rel="stylesheet" href="CSS/Estilo2.css" />
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="engine1/jquery.js"></script>
-	</head>
-	
-	<body>
-		<!--Menu-->
-		<div class="navbar">
-			<a href="Pasatiempo.html">🠨</a>
+
+<head>
+	<title>Biografía</title>
+	<meta charset="utf-8" />
+	<link rel="stylesheet" href="CSS/Estilo2.css" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="engine1/jquery.js"></script>
+</head>
+
+<body>
+	<!--Menu-->
+
+	<ul class="main-navigation">
+		<li><a href="#"><pre> </pre></a></li>
+		<div class="center">
+			<li><a href="Pasatiempo.html">🠨</a></li>
+			<li><a href="Personales.html">Personales</a>
+				<ul>
+					<li><a href="Autobiografia.html">Autobiografía</a></li>
+					<li><a href="Pasatiempos.html">Pasatiempos</a></li>
+					<li><a href="Biografia.html">Biografía</a></li>
+				</ul>
+			</li>
+			<li class="grande"><a href="Index.html">⌂</a></li>
+			<li><a href="Tareas.html">Tareas</a>
+				<ul>
+					<li><a href="Tarea1.html">Tarea 1</a></li>
+					<li><a href="Tarea2.html">Tarea 2</a></li>
+					<li><a href="Tarea3.html">Tarea 3</a></li>
+					<li><a href="Tarea4.html">Tarea 4</a></li>
+					<li><a href="Tarea5.html">Tarea 5</a></li>
+					<li><a href="Tarea6.html">Tarea 6</a></li>
+					<li><a href="Tarea7.html">Tarea 7</a></li>
+					<li><a href="Tarea8.html">Tarea 8</a></li>
+					<li><a href="Tarea9.html">Tarea 9</a></li>
+					<li><a href="Tarea10.html">Tarea 10</a></li>
+					<li><a href="Tarea11.html">Tarea 11</a></li>
+					<li><a href="Tarea12.html">Tarea 12</a></li>
+					<li><a href="Tarea13.html">Tarea 13</a></li>
+					<li><a href="Tarea14.html">Tarea 14</a></li>
+					<li><a href="Tarea15.html">Tarea 15</a></li>
+					<li><a href="Tarea16.html">Tarea 16</a></li>
+				</ul>
+			</li>
+			<li><a href="Personales.html">🠪</a></li>
+		</div>
+	</ul>
+	<!-- <div class="navbar">
 			<div class="dropdown">
 				<button class="dropbtn"><a href="Personales.html">Personales</a></button>
 				<div class="dropdown-content">
@@ -44,19 +80,20 @@
 			</div>
 			<a href="Personales.html">🠪</a>
 		</div>
-		<!--Fin Menu-->
-		
-		<br>
-		<table>
-			<tr>
-			<th><img src="Imagenes/index1.jpg" style="float:right;width:200px;height:200px;"></th>
+		-->
+
+	<br>
+	<table>
+		<tr>
+			<th><img src="Imagenes/index1jpg" style="float:right;width:200px;height:200px;"></th>
 			<th><span style="color: #FF7272">Alumna: </span>Azul Carolina Martínez Cabañas<br>
-			<span style="color: #FF7272">Matricula: </span>1868435<br>
-			<span style="color: #FF7272">Carrera: </span>ITS<br>
-			<span style="color: #FF7272">Materia: </span>Lenguajes de Programación<br>
-			<span style="color: #FF7272">Periodo: </span>Enero-Junio 2020<br>
-			<span style="color: #FF7272">Maestro: </span>Ing. Ismael Gutiérrez Pimentel</th>
-			</tr>
-		</table>
-	</body>
+				<span style="color: #FF7272">Matricula: </span>1868435<br>
+				<span style="color: #FF7272">Carrera: </span>ITS<br>
+				<span style="color: #FF7272">Materia: </span>Lenguajes de Programación<br>
+				<span style="color: #FF7272">Periodo: </span>Enero-Junio 2020<br>
+				<span style="color: #FF7272">Maestro: </span>Ing. Ismael Gutiérrez Pimentel</th>
+		</tr>
+	</table>
+</body>
+
 </html>
