--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
 					<a href="Biografia.html">Biografía</a>
 				</div>
 			</div>
-			<a class="active" href="Index.html">⌂</a>
+			<a href="Index.html">⌂</a>
 			<div class="dropdown">
 				<button class="dropbtn"><a href="Tareas.html">Tareas</a></button>
 				<div class="dropdown-content">
