--- a/Personales.html
+++ b/Personales.html
@@ -10,41 +10,42 @@
 	
 	<body>
 		<!--Menu-->
-		<div class="navbar">
-			<a href="Pasatiempo.html">🠨</a>
-			<div class="dropdown">
-				<button class="dropbtn"><a class="active" href="Personales.html">Personales</a><button>
-				<div class="dropdown-content">
-					<a href="Autobiografia.html">Autobiografía</a>
-					<a href="Pasatiempos.html">Pasatiempos</a>
-					<a href="Biografia.html">Biografía</a>
-				</div>
-			</div>
-			<a href="Index.html">⌂</a>
-			<div class="dropdown">
-				<button class="dropbtn"><a href="Tareas.html">Tareas</a></button>
-				<div class="dropdown-content">
-					<a href="Tarea1.html">Tarea 1</a>
-					<a href="Tarea2.html">Tarea 2</a>
-					<a href="Tarea3.html">Tarea 3</a>
-					<a href="Tarea4.html">Tarea 4</a>
-      				<a href="Tarea5.html">Tarea 5</a>
-        			<a href="Tarea6.html">Tarea 6</a>
-					<a href="Tarea7.html">Tarea 7</a>
-					<a href="Tarea8.html">Tarea 8</a>
-					<a href="Tarea9.html">Tarea 9</a>
-					<a href="Tarea10.html">Tarea 10</a>
-                    <a href="Tarea11.html">Tarea 11</a>
-					<a href="Tarea12.html">Tarea 12</a>
-					<a href="Tarea13.html">Tarea 13</a>
-					<a href="Tarea14.html">Tarea 14</a>
-					<a href="Tarea15.html">Tarea 15</a>
-					<a href="Tarea16.html">Tarea 16</a>
-				</div>
-			</div>
-			<a href="Personales.html">🠪</a>
+	<ul class="main-navigation">
+		<li><a href="#"><pre> </pre></a></li>
+		<div class="center">
+			<li><a href="Pasatiempo.html">🠨</a></li>
+			<li><a href="Personales.html">Personales</a>
+				<ul>
+					<li><a href="Autobiografia.html">Autobiografía</a></li>
+					<li><a href="Pasatiempos.html">Pasatiempos</a></li>
+					<li><a href="Biografia.html">Biografía</a></li>
+				</ul>
+			</li>
+			<li><a href="Index.html">⌂</a></li>
+			<li><a href="Tareas.html">Tareas</a>
+				<ul>
+					<li><a href="Tarea1.html">Tarea 1</a></li>
+					<li><a href="Tarea2.html">Tarea 2</a></li>
+					<li><a href="Tarea3.html">Tarea 3</a></li>
+					<li><a href="Tarea4.html">Tarea 4</a></li>
+					<li><a href="Tarea5.html">Tarea 5</a></li>
+					<li><a href="Tarea6.html">Tarea 6</a></li>
+					<li><a href="Tarea7.html">Tarea 7</a></li>
+					<li><a href="Tarea8.html">Tarea 8</a></li>
+					<li><a href="Tarea9.html">Tarea 9</a></li>
+					<li><a href="Tarea10.html">Tarea 10</a></li>
+					<li><a href="Tarea11.html">Tarea 11</a></li>
+					<li><a href="Tarea12.html">Tarea 12</a></li>
+					<li><a href="Tarea13.html">Tarea 13</a></li>
+					<li><a href="Tarea14.html">Tarea 14</a></li>
+					<li><a href="Tarea15.html">Tarea 15</a></li>
+					<li><a href="Tarea16.html">Tarea 16</a></li>
+				</ul>
+			</li>
+			<li><a href="Personales.html">🠪</a></li>
 		</div>
-		<!--Fin Menu-->
+	</ul>
+	<!-- Fin Menu-->
 		
 		<br>
 		<div class="row center">
