--- a/Personales.html
+++ b/Personales.html
@@ -7,47 +7,47 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="engine1/jquery.js"></script>
 	</head>
-	
+
 	<body>
-		<!--Menu-->
+	<!--Menu-->
+	<div class="barra">
 	<ul class="main-navigation">
-		<li><a href="#"><pre></pre></a></li>
 		<div class="center">
 			<li><a href="Pasatiempo.html">🠨</a></li>
 			<li><a href="Personales.html">Personales</a>
 				<ul>
-					<li><a href="Autobiografia.html">Autobiografía</a></li>
-					<li><a href="Pasatiempos.html">Pasatiempos</a></li>
-					<li><a href="Biografia.html">Biografía</a></li>
+					<li class="sub"><a href="Autobiografia.html">Autobiografía</a></li>
+					<li class="sub"><a href="Pasatiempos.html">Pasatiempos</a></li>
+					<li class="sub"><a href="Biografia.html">Biografía</a></li>
 				</ul>
 			</li>
 			<li><a href="Index.html">⌂</a></li>
 			<li><a href="Tareas.html">Tareas</a>
 				<ul>
-					<li><a href="Tarea1.html">Tarea 1</a></li>
-					<li><a href="Tarea2.html">Tarea 2</a></li>
-					<li><a href="Tarea3.html">Tarea 3</a></li>
-					<li><a href="Tarea4.html">Tarea 4</a></li>
-					<li><a href="Tarea5.html">Tarea 5</a></li>
-					<li><a href="Tarea6.html">Tarea 6</a></li>
-					<li><a href="Tarea7.html">Tarea 7</a></li>
-					<li><a href="Tarea8.html">Tarea 8</a></li>
-					<li><a href="Tarea9.html">Tarea 9</a></li>
-					<li><a href="Tarea10.html">Tarea 10</a></li>
-					<li><a href="Tarea11.html">Tarea 11</a></li>
-					<li><a href="Tarea12.html">Tarea 12</a></li>
-					<li><a href="Tarea13.html">Tarea 13</a></li>
-					<li><a href="Tarea14.html">Tarea 14</a></li>
-					<li><a href="Tarea15.html">Tarea 15</a></li>
-					<li><a href="Tarea16.html">Tarea 16</a></li>
+					<li class="sub"><a href="Tarea1.html">Tarea 1</a></li>
+					<li class="sub"><a href="Tarea2.html">Tarea 2</a></li>
+					<li class="sub"><a href="Tarea3.html">Tarea 3</a></li>
+					<li class="sub"><a href="Tarea4.html">Tarea 4</a></li>
+					<li class="sub"><a href="Tarea5.html">Tarea 5</a></li>
+					<li class="sub"><a href="Tarea6.html">Tarea 6</a></li>
+					<li class="sub"><a href="Tarea7.html">Tarea 7</a></li>
+					<li class="sub"><a href="Tarea8.html">Tarea 8</a></li>
+					<li class="sub"><a href="Tarea9.html">Tarea 9</a></li>
+					<li class="sub"><a href="Tarea10.html">Tarea 10</a></li>
+					<li class="sub"><a href="Tarea11.html">Tarea 11</a></li>
+					<li class="sub"><a href="Tarea12.html">Tarea 12</a></li>
+					<li class="sub"><a href="Tarea13.html">Tarea 13</a></li>
+					<li class="sub"><a href="Tarea14.html">Tarea 14</a></li>
+					<li class="sub"><a href="Tarea15.html">Tarea 15</a></li>
+					<li class="sub"><a href="Tarea16.html">Tarea 16</a></li>
 				</ul>
 			</li>
 			<li><a href="Personales.html">🠪</a></li>
 		</div>
 	</ul>
+	</div>
 	<!-- Fin Menu-->
-		
-		<br>
+
 		<div class="row center">
 			<div class="column">
 				<div class="container">
