--- a/Autobiografia.html
+++ b/Autobiografia.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Personales</title>
+		<title>Autobiografia</title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="CSS/Estilo2.css" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -13,7 +13,7 @@
 	<div class="barra">
 	<ul class="main-navigation">
 		<div class="center">
-			<li><a href="Biografia.html">🠨</a></li>
+			<li><a href="Personales.html">🠨</a></li>
 			<li><a href="Personales.html">Personales</a>
 				<ul>
 					<li class="sub"><a href="Autobiografia.html">Autobiografía</a></li>
@@ -42,40 +42,16 @@
 					<li class="sub"><a href="Tarea16.html">Tarea 16</a></li>
 				</ul>
 			</li>
-			<li><a href="Autobiografia.html">🠪</a></li>
+			<li><a href="Pasatiempo.html">🠪</a></li>
 		</div>
 	</ul>
 	</div>
 	<!-- Fin Menu-->
 
-		<div class="row center">
-			<div class="column">
-				<div class="container">
-					<img src="Imagenes/index1.jpg" width="200" height="200" alt="autobio" class="image">
-					<div class="overlay">
-						<a href="Autobiografia.html">
-						<div class="text">Mi autobiografía</div></a>
-					</div>
-				</div>
-			</div>
-			<div class="column">
-				<div class="container">
-					<img src="Imagenes/hobby4.jpg" width="200" height="200" alt="hobby">
-					<div class="overlay">
-						<a href="Pasatiempo.html">
-						<div class="text">Mi pasatiempo</div></a>
-					</div>
-				</div>
-			</div>
-			<div class="column">
-				<div class="container">
-					<img src="Imagenes/personales3.jpg" width="200" height="200" alt="bio">
-					<div class="overlay">
-						<a href="Biografia.html">
-						<div class="text">Biografía<br>Blanca Treviño</div></a>
-					</div>
-				</div>
-			</div>
-		</div>
+	<img src="Imagenes/index1.jpg" class="investigaciones">
+	<span>
+	<h2>Azul Carolina Martínez Cabañas</h2>
+	<p>Este es mi texto xd</p>
+	</span>
 	</body>
 </html>
