--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
 				<li><a href="Personales.html">Personales</a>
 					<ul>
 						<li class="sub"><a href="Autobiografia.html">Autobiografía</a></li>
-						<li class="sub"><a href="Pasatiempos.html">Pasatiempos</a></li>
+						<li class="sub"><a href="Pasatiempo.html">Pasatiempo</a></li>
 						<li class="sub"><a href="Biografia.html">Biografía</a></li>
 					</ul>
 				</li>
