--- a/Tareas.html
+++ b/Tareas.html
@@ -13,11 +13,11 @@
 	<div class="barra">
 	<ul class="main-navigation">
 		<div class="center">
-			<li><a href="Pasatiempo.html">🠨</a></li>
+			<li><a href="Tarea16.html">🠨</a></li>
 			<li><a href="Personales.html">Personales</a>
 				<ul>
 					<li class="sub"><a href="Autobiografia.html">Autobiografía</a></li>
-					<li class="sub"><a href="Pasatiempos.html">Pasatiempos</a></li>
+					<li class="sub"><a href="Pasatiempo.html">Pasatiempo</a></li>
 					<li class="sub"><a href="Biografia.html">Biografía</a></li>
 				</ul>
 			</li>
@@ -42,7 +42,7 @@
 					<li class="sub"><a href="Tarea16.html">Tarea 16</a></li>
 				</ul>
 			</li>
-			<li><a href="Personales.html">🠪</a></li>
+			<li><a href="Tarea1.html">🠪</a></li>
 		</div>
 	</ul>
 	</div>
