en su casa lavan ropa?

--- a/Autobiografia.html
+++ b/Autobiografia.html
@@ -48,10 +48,18 @@
 	</div>
 	<!-- Fin Menu-->
 
-	<img src="Imagenes/index1.jpg" class="investigaciones">
-	<span>
-	<h2>Azul Carolina Martínez Cabañas</h2>
-	<p>Este es mi texto xd</p>
-	</span>
+	<div class="fila">
+			<div class="columnatext">
+				<div class="contenedor">
+					uwuwuwuwuuwuwuwuwuwuwuuwuwuwuwuwuwuuwuwuwuwuuwuwuwuwuwuwuuwuwuwuwuwuwuuwuwuwuwuuwuwuwuwuwuwuuwuwuwuwuwuwu<br>
+					uwuwuwuwuuwuwuwuwuwuwuuwuwuwuwuwuwuuwuwuwuwuuwuwuwuwuwuwuuwuwuwuwuwuwuuwuwuwuwuuwuwuwuwuwuwuuwuwuwuwuwuwu<br>
+				</div>
+			</div>
+			<div class="columnaimg">
+				<div class="contenedor">
+					<img src="Imagenes/index1.jpg" width="200" height="200" alt="autobio" class="image">
+				</div>
+			</div>	
+		</div>
 	</body>
 </html>
