LALITO I DID IT UWU

--- a/Autobiografia.html
+++ b/Autobiografia.html
@@ -47,19 +47,44 @@
 	</ul>
 	</div>
 	<!-- Fin Menu-->
-
+	<br><br><br>
+	<h2>Mi autobiografía</h2>
 	<div class="fila">
-			<div class="columnatext">
-				<div class="contenedor">
-					uwuwuwuwuuwuwuwuwuwuwuuwuwuwuwuwuwuuwuwuwuwuuwuwuwuwuwuwuuwuwuwuwuwuwuuwuwuwuwuuwuwuwuwuwuwuuwuwuwuwuwuwu<br>
-					uwuwuwuwuuwuwuwuwuwuwuuwuwuwuwuwuwuuwuwuwuwuuwuwuwuwuwuwuuwuwuwuwuwuwuuwuwuwuwuuwuwuwuwuwuwuuwuwuwuwuwuwu<br>
-				</div>
+		<div class="columnatext">
+			<div class="contenedor">
+					Mi nombre es <span style="color: #FF7272">Azul Carolina Martínez Cabañas</span>, nací un Jueves 26 de Julio del año 2001 en San Nicolás de los Garza a las 00:47 con 36 segundos según mi papá.
+					Desde pequeña he sido una persona activa y extrovertida por lo que no me cuesta hacer amigos o acoplarme a situaciones no familiares. En mi tiempo libre disfruto de
+					escuchar mi música mientras salgo a caminar, practicar canto y una de mis actividades favoritas que es maquillarme.
+					Mi pasión se encuentra en los <span style="color: #FF7272">negocios</span> desde que comencé a trabajar en ese ámbito al realizar tratados de patrocinio para el equipo de robótica al que pertenezco. Es por lo último
+					que en un futuro me gustaría desempeñarme en dicha rama, realizando alianzas estrátegicas entre empresas.<br><br>
+					Jamás he salido del país por lo que hay cientos de lugares que me gustaría visitar, pero uno de los primeros en la lista es <span style="color: #FF7272">Seúl</span> en Corea del Sur al ser este la sede de uno de mis géneros
+					musicales favoritos, de igual manera porque me gustaría tener la experiencia de practicar el idioma fuera de un contexto educativo. Aparte de Seúl, me gustaría conocer <span style="color: #FF7272">Tokyo</span> donde según lo que
+					he visto, es una ciudad con muchísimo caracter donde puedes realizar infinidad de actividades desde jugar maquinas de garra como visitar hermosos parques.
 			</div>
-			<div class="columnaimg">
-				<div class="contenedor">
-					<img src="Imagenes/index1.jpg" width="200" height="200" alt="autobio" class="image">
-				</div>
-			</div>	
 		</div>
+		<div class="contenedor">
+			<img src="Imagenes/autob4.jpg" width="180" height="180" class="image sombra" style="float:left;box-shadow: 5px 5px 6px rgba(137, 0, 0, 0.28);"><br><br><br><br><br><br><br><br>
+			<img src="Imagenes/autob6.jpg" width="180" height="180" class="image sombra" style="float:right; box-shadow: 5px 5px 6px rgba(137, 0, 0, 0.28);">
+		</div>
+	</div>
+	<br><br>
+	<div class="fila">
+		<div class="columnatext">
+			<div class="contenedor">
+					Una de mis más grandes inspiraciones es mi <span style="color: #FF7272">mamá</span> quien desde pequeña me ha demostrado lo que una mujer empoderada puede lograr cuando se lo proponen además de ser la única persona en la que quiero ser 100%
+					honesta sin importar cual sea el tema. Es una mujer que verdaderamente me inspira día con día con sus logros, su bondad y amor por los demás.
+					Algo que también me inspira es la <span style="color: #FF7272">música</span>, siendo esta un lugar donde puedes encontrar letras hermosas con las que podemos conectar, melodías que consuelan el alma y que muchas veces logran ser
+					tan conmovedoras que nuestros sentidos se encuentran a flor de piel.<br><br>
+					Soy una persona extrovertida por lo que jamás he batallado para hacer amigos sin importar el lugar, sin embargo sigo siendo una persona que prefiere tener un grupo social y disfruto salir con ellos cada vez que pueda. Me gusta preparar
+					salidas con mis amigos a lugares donde podamos tomarnos fotos, por lo que la mayoría de las veces nos reunimos primero para decidir atuendos y hacernos el maquillaje, estas salidas son mis favoritas ya que no solo tienes lindas fotos que 
+					publicar, también mientras las tomas puedes aprovechar para hacer cumplidos a tus amigos logrando que ellos sonrían.
+			</div>
+		</div>
+		<div class="contenedor">
+			<img src="Imagenes/autob5.jpg" width="180" height="180" class="image sombra" style="float:left;box-shadow: 5px 5px 6px rgba(137, 0, 0, 0.28);"><br><br><br><br><br><br><br><br>
+			<img src="Imagenes/autob7.jpg" width="180" height="180" class="image sombra" style="float:right; box-shadow: 5px 5px 6px rgba(137, 0, 0, 0.28);"><br><br>
+		</div>
+	</div>
+	
 	</body>
 </html>
