--- a/Biografia.html
+++ b/Biografia.html
@@ -46,8 +46,70 @@
 		</div>
 	</ul>
 	</div>
-	
 	<!-- Fin Menu-->
+	
+	<br><br><br>
+	<h2>Blanca Treviño</h2>
+	<div class="fila">
+		<div class="columnatext">
+			<div class="contenedor">
+				Blanca Treviño Avelino de Vega, nacida el 8 de mayo de 1959 en el estado de Nuevo León en México, egresada del Instituto Tecnológico de Estudios Superiores de Monterrey como Licenciada en Sistemas de
+				Computación es la actual Presidenta y CEO de la empresa de TI mexicana Softtek. <br><br>
+				
+				Tras egresar de su carrera profesional en 1981, Blanca, junto a varios compañeros, funda la empresa Softtek con la visión de establecer una empresa global que atendería a los grandes corporativos con la
+				propuesta de valor de apuntalar su competitividad. Aunque esto no sería una labor sencilla, ya que tuvo que enfrentar múltiples prejuicios a la hora de presentar su proyecto ante el mundo. En sus primeros
+				años fue objeto de escepticismo y críticas, refiriéndose a ella y a sus socios como “locos” o “soñadores” e inclusive señalandolos como una posible secta debido a la efusividad con la que impulsaban su idea,
+				aunque finalmente alcanzarian el tan ansiado éxito, y Softtek  terminaria convirtiéndose en la empresa de TI líder en toda Latinoamérica, con centros de desarrollos en Argentina, Chile, China, España, Estados
+				Unidos, Brasil, India y México.
+			</div>
+		</div>
+		<div class="contenedor">
+			<img src="Imagenes/bio1.jpg" width="180" height="180" class="image sombra" style="float:left;box-shadow: 5px 5px 6px rgba(137, 0, 0, 0.28);"><br><br><br><br><br><br><br><br>
+			<img src="Imagenes/bio7.jpg" width="180" height="180" class="image sombra" style="float:right; box-shadow: 5px 5px 6px rgba(137, 0, 0, 0.28);">
+		</div>
+	</div>
+	<div class="fila">
+		<div class="columnatext2">
+			<div class="contenedor">
+				Ella es una mujer que ha recibido múltiples reconocimientos por la importancia y trascendencia de su labor en Softtek, entre los que destacan su incursión en el Salón de la Fama de WITI (Women in
+				Technology International), su posicionamiento en el cuarto lugar de la lista de las mujeres más poderosas en México en 2020 de acuerdo a la revista Expansión, el recibimiento del Premio Forbes a las
+				Excelencia Empresarial en 2015, así como el ser la primera mujer en ser introducida al Outsourcing Hall of Fame de la Asociación Internacionalde Proveedores de Outsourcing (IAOP).<br><br>  
+				
+				Una de las claves principales para el rotundo éxito obtenido se debe a la implementación del innovador modelo conocido como Near Shore, el cual se define como una manera más eficiente de outsourcing en la
+				que se aprovecha la inmediación estratégica con potencias mundiales, ofreciéndoles mayor beneficio económico al contratar sus servicios y empleados al ofrecer cuotas competitivas, compatibilidad cultural,
+				proximidad y una zona horaria compartida, todo esto aprovechando su cercanía geográfica.<br><br>
+			</div>
+		</div>
+		<div class="contenedor">
+			<img src="Imagenes/bio2.jpg" width="200" height="200" class="image sombra" style="float:left;box-shadow: 5px 5px 6px rgba(137, 0, 0, 0.28);"><br><br><br><br><br><br><br><br>
+			<img src="Imagenes/bio6.jpg" width="200" height="200" class="image sombra" style="float:right; box-shadow: 5px 5px 6px rgba(137, 0, 0, 0.28);"><br><br>
+		</div>
+	</div>
+	<br><br>
+	<div class="fila">
+		<div class="columnatext">
+			<div class="contenedor">
+				Softtek fue la primer empresa en utilizar este modelo con sus primeros clientes estadounidenses en 1997 y tomó mayor popularidad en el 2002 cuando se empezó a promover este concepto más agresivamente con
+				el apoyo del gobierno mexicano. Todos estos logros y avances no hubieran sido posibles de no ser por Blanca Treviño, quien, desde su fundación y hasta el dia de hoy, aún labora como la Presidenta y CEO de
+				Softtek, logrando no sólo su propio éxito profesional y ganancias económicas millonarias, sino que también estableciendo a México como una nación potencia en cuanto a empresas de Outsourcing, generando miles
+				de empleos, apoyando a la economía y competitividad mexicana en el proceso con métodos innovativos que han sido trascendentales para el desarrollo de las empresas de Tecnologías de Información a nivel global.
+			</div>
+		</div>
+		<div class="contenedor">
+			<img src="Imagenes/bio4.jpg" width="230" height="320" class="image sombra" style="float:left;box-shadow: 5px 5px 6px rgba(137, 0, 0, 0.28);"><br><br><br><br><br><br><br><br>
+		</div>
+	</div>
+	
+	<h2>Bibliografía</h2>
+	<div class="fila" style="padding-bottom:10px;">
+		<div class="columnabio">
+			<div class="contenedor">
+				<span style="color: #FF7272">•</span> Rivera, D.(2020).<i>¿Qué son los paradigmas de programación?</i>, de EDteam. Sitio web: https://ed.team/blog/que-son-los-paradigmas-de-programacion-cf5554db-9498-475e-b281-981c4fa0f841 <br><br>
+				<span style="color: #FF7272">•</span> Vaca, C.(2011).<i>Paradigmas de Programación</i>, de UVa. Sitio web: https://www.infor.uva.es/~cvaca/asigs/docpar/intro.pdf<br><br>
+				<span style="color: #FF7272">•</span> ND.(2020). <i>Paradigmas de programación: principios básicos de programación</i>, de IONOS. Sitio web: https://www.ionos.es/digitalguide/paginas-web/desarrollo-web/paradigmas-de-programacion/
+			</div>
+		</div>
+	</div>
 		
 	</body>
 </html>
