--- a/Biografia.html
+++ b/Biografia.html
@@ -104,9 +104,11 @@
 	<div class="fila" style="padding-bottom:10px;">
 		<div class="columnabio">
 			<div class="contenedor">
-				<span style="color: #FF7272">•</span> Rivera, D.(2020).<i>¿Qué son los paradigmas de programación?</i>, de EDteam. Sitio web: https://ed.team/blog/que-son-los-paradigmas-de-programacion-cf5554db-9498-475e-b281-981c4fa0f841 <br><br>
-				<span style="color: #FF7272">•</span> Vaca, C.(2011).<i>Paradigmas de Programación</i>, de UVa. Sitio web: https://www.infor.uva.es/~cvaca/asigs/docpar/intro.pdf<br><br>
-				<span style="color: #FF7272">•</span> ND.(2020). <i>Paradigmas de programación: principios básicos de programación</i>, de IONOS. Sitio web: https://www.ionos.es/digitalguide/paginas-web/desarrollo-web/paradigmas-de-programacion/
+				<span style="color: #FF7272">•</span> Takahashi, H.(2014).<i>Blanca Treviño, la mujer que no quería ser millonaria</i>, de Forbes México. Sitio web: https://www.forbes.com.mx/softtek-soluciones-tecnologicas-a-la-mexicana/ <br><br>
+				<span style="color: #FF7272">•</span> Staff, F.(2019).<i>Blanca Treviño ingresará al Salón de la Fama de Mujeres en Tecnología</i>, de Forbes México. Sitio web: https://www.forbes.com.mx/blanca-trevino-ingresara-al-salon-de-la-fama-de-mujeres-en-tecnologia/ <br><br>
+				<span style="color: #FF7272">•</span> Staff, F.(2015). <i>Blanca Treviño recibe Premio Forbes a la Excelencia Empresarial 2015</i>, de Forbes México. Sitio web: https://www.forbes.com.mx/blanca-trevino-recibe-premio-forbes-a-la-excelencia-empresarial-2015<br><br>
+				<span style="color: #FF7272">•</span> ND(2020).<i>Estas son las 100 Mujeres Poderosas de los negocios 2020</i>, de ND. Sitio web: https://expansion.mx/carrera/2020/02/25/estas-son-las-100-mujeres-poderosas-de-los-negocios-2020<br><br>
+				<span style="color: #FF7272">•</span> ND(ND). <i>Nearshore outsourcing</i>, de Softtek. Sitio web: https://www.softtek.com/es/approach/nearshore-outsourcing<br><br>
 			</div>
 		</div>
 	</div>
